# metapeek

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  metapeek.py  metapeek_config.py  pyproject.toml  requirements.txt  setup.sh  taskbar_config.py  taskbar_overlay.py
.github/workflows/: ci.yml
tests/: conftest.py  test_config.py  test_metapeek_config.py
